--- a/style.css
+++ b/style.css
@@ -383,49 +383,48 @@
     
     text-align: center;
 }
-#content .cs-t .car-selection-field {
-    display:table;
-    width:90vw;
+#content .cs-t .car-select {
+    justify-content: start;
     height:fit-content;
     align-self: start;
 }
-#content .car-selection-field .car-selection-row {
-    display:table-row;
-    width:fit-content;
-    height:20vh;
-}
-#content .car-selection-row .car-cell {
-    display:table-cell;
-    vertical-align: center;
-    text-align: center;
-}
-#content .p-grid {
-    display:grid;
+#content .car-cell {
+    display: inline-grid;
+    width: 700px;
+    height: 600px;
+    max-width: 90vw;
+    max-height: 70vmax;
     margin:10px;
     border-radius: 20px;
     background-color: var(--bg-d);
     grid-template-columns: 100%;
-    grid-template-rows: 400px 100px;
+    grid-template-rows: 80% 20%;  
+    padding-bottom:20px;  
 }
-#content .p-grid .car-img {
+#content .car-cell>.car-img {
     width:90%;
     height:90%;
     align-self:center;
     justify-self:center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 100% 100%;
     background-position-x:center;
     background-position-y:center;
-    border-radius: 15px;
+    border-radius: 30px;
 }
-#content .p-grid .car-descr-block {
+#content .car-cell>.car-descr-block {
     display:grid;
     grid-template-columns: 100%;
-    grid-template-rows: 35% 65%;
+    grid-template-rows: 25% 30% 45%;
     padding-left:20px;
     padding-right:20px;
 }
 #content .car-descr-block>.car-name {
+    font-size:1.5rem;
+    color:var(--font-color-l);
+    align-self:center;
+}
+#content .car-descr-block>.price {
     font-size:1.5rem;
     color:var(--font-color-l);
     align-self:center;
@@ -803,12 +802,16 @@
 .fam-merw {
     font-family: 'Merriweather';
 }
-.grid-1x-1y {
+.grid-1x-2y {
     display:grid;
     grid-template-columns: 100%;
+    grid-template-rows: max-content max-content;
+}
+.grid-2x-1y {
+    display:grid;
+    grid-template-columns: 50% 50%;
     grid-template-rows: 100%;
 }
-
 .grid-3x-3y {
     display:grid;
     width:90%;
@@ -906,6 +909,137 @@
     justify-content: center;
     align-self: center;
     align-content: center;
+}
+.lpad-1 {
+    padding-left: 1%;
+}
+.lpad-5 {
+    padding-left: 5%;
+}
+.lpad-10 {
+    padding-left: 10%;
+}
+.lpad-20 {
+    padding-left: 20%;
+}
+.lpad-30 {
+    padding-left: 30%;
+}
+
+
+.rpad-1 {
+    padding-right: 1%
+}
+.rpad-5 {
+    padding-right: 5%;
+}
+.rpad-10 {
+    padding-right: 10%;
+}
+.rpad-20 {
+    padding-right: 20%;
+}
+.rpad-30 {
+    padding-right: 30%;
+}
+.tpad-1 {
+    padding-top: 1%
+}
+.tpad-5 {
+    padding-top: 5%;
+}
+.tpad-10 {
+    padding-top: 10%;
+}
+.tpad-20 {
+    padding-top: 20%;
+}
+.tpad-30 {
+    padding-top: 30%;
+}
+
+.bpad-1 {
+    padding-bottom: 1%
+}
+.tpad-5 {
+    padding-bottom: 5%;
+}
+.tpad-10 {
+    padding-bottom: 10%;
+}
+.tpad-20 {
+    padding-bottom: 20%;
+}
+.tpad-30 {
+    padding-bottom: 30%;
+}
+
+.lmar-1 {
+    margin-left: 1%;
+}
+.lmar-5 {
+    margin-left: 5%;
+}
+.lmar-10 {
+    margin-left: 10%;
+}
+.lmar-20 {
+    margin-left: 20%;
+}
+.lmar-30 {
+    margin-left: 30%;
+}
+
+
+.rmar-1 {
+    margin-right: 1%
+}
+.rmar-5 {
+    margin-right: 5%;
+}
+.rmar-10 {
+    margin-right: 10%;
+}
+.rmar-20 {
+    margin-right: 20%;
+}
+.rmar-30 {
+    margin-right: 30%;
+}
+.tmar-1 {
+    margin-top: 1%
+}
+.tmar-5 {
+    margin-top: 5%;
+}
+.tmar-10 {
+    margin-top: 10%;
+}
+.tmar-20 {
+    margin-top: 20%;
+}
+.tmar-30 {
+    margin-top: 30%;
+}
+
+.bmar-1 {
+    margin-bottom: 1%
+}
+.bmar-5 {
+    margin-bottom: 5%;
+}
+.bmar-10 {
+    margin-bottom: 10%;
+}
+.bmar-20 {
+    margin-bottom: 20%;
+}
+.bmar-30 {
+    margin-bottom: 30%;
+}
+
+.flex {
+    display:flex;
 }
 @media screen and (max-width:1270px) {
     .element {
