--- a/style.css
+++ b/style.css
@@ -62,6 +62,23 @@
 #prof-case::before {
     content: "Личный кабинет";
 }
+
+#car-details {
+    display:grid;
+    position:fixed;
+    grid-template-columns: 60% 40%;
+    grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+}
+#car-details .car-img {
+    grid-row: span 10;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    border-radius: 30px;
+}
+#car-details .text {
+
+}
+
 .element {
     display:flex;
     width:100%;
@@ -108,7 +125,7 @@
     position:fixed;
     justify-self: right;
     font-family: 'Comfortaa';
-    width: 300px;
+    width: 80%;
     max-width: 100%;
     margin-top: 4em;
     background-color: var(--header-bg-color);
@@ -133,7 +150,7 @@
     padding-left:10%;
     padding-bottom: 5%;
     color:white;
-    font-size: 4vh;
+    font-size: 100%;
     text-align: left;
     border-bottom: 1px solid var(--header-border-color);
     cursor:pointer;
@@ -195,11 +212,13 @@
 
 #card-form {
     display:grid;
+    width:100%;
+    height:100%;
     grid-template-columns: 100%;
     grid-template-rows: 50% 20%;
 }
 #add-btn {
-    font-size:2rem;
+    font-size:4vh;
 }
 .card-label {
     width: 60%;
@@ -211,13 +230,20 @@
     grid-template-columns: 100%;
     grid-template-rows: 30% 70%;
 }
+
 .card-type-label {
     height:100%;
     margin-left:5%;
 }
 .card-type-label .text {
-    font-size: 3rem;
+    font-size: 30px;
+    align-self: center;
     text-shadow: 1px 3px 0px black;
+}
+@media screen and (max-width: 590px) {
+    .card-type-label .text {
+        font-size: 20px;
+    }
 }
 .pay-system-img 
 {    
@@ -241,6 +267,9 @@
     text-shadow: 1px 3px 0px rgb(6, 65, 6);
     font-size:1.3rem;
 }
+.cardin-label input{
+    height:80%;
+}
 
 .cardin-label {
     width:100%;
@@ -248,11 +277,6 @@
 }
 .grid-col-span-3 {
     grid-column: span 3;
-}
-@media screen and (max-width: 846px) {
-    .card-type-label .text {
-        font-size: 2rem;
-    }
 }
 .cardin-label>input {
     width:91%;
@@ -324,18 +348,6 @@
     
 }  
 
-.dg-left:hover {
-    padding-left:5vw;
-}
-
-.dg-right:hover {
-    padding-right:5vw;
-}
-
-
-.text {
-    font-size: 4vh;
-}
 
 #content .descr-grid .img-elem {
     width: 80%;
@@ -566,24 +578,36 @@
 
 .central-holder {
     display:grid;
-    width:60%;
+    width:1000px;
     justify-self: center;
-    grid-template-columns: 20% 80%;
-    grid-template-rows: 20% 80%;
+    grid-template-columns: 250px 70%;
+    grid-template-rows: 250px 70%;
 }
-
 .profile-name-font {
     padding-top: 1.5em;
     font-size:2.5em;
     font-family: 'Comfortaa';
 }
+@media screen and (max-width:1200px) {
+    .central-holder {
+        width:90%;
+        grid-template-columns: 80px 70%;
+        grid-template-rows: 80px 70%;
+    }
+    .profile-name-font {
+        padding-top: 1em;
+        font-size: 1.5em;
+    }
+} 
 
 .profile-img {
-    width: 10vmax;
-    height: 10vmax;
+    width: 80%;
+    height: 80%;
     border-radius:100%;
-    align-self: center;
+    align-self: start;
     justify-self: center;
+    margin-top:10%;
+    margin-left:10%;
     background: url(img/profile.png) no-repeat;
     background-size: 100% 100%;
 }
@@ -801,6 +825,11 @@
 }
 .fam-merw {
     font-family: 'Merriweather';
+}
+.grid-1x-1y {
+    display:grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 100%;
 }
 .grid-1x-2y {
     display:grid;
@@ -1074,14 +1103,14 @@
     #nav-menu {
         display:flex;
     }
-    .card-type-label>.text{
-        font-size:2em;
+    .front-bg {
+        width:100%;
     }
-    
 }
 @media screen and (min-width:892px) {
     #vm {
         display:none;
     }
+    
     
 }
