--- a/style.css
+++ b/style.css
@@ -52,12 +52,10 @@
     grid-template-rows: 4em;
 }
 .no-log-header-template-columns {
-    grid-template-columns: 16.5% 16.5% 16.5% 16.5% 16.5% 16.5%;
-
+    grid-template-columns: 15% 15% 15% 15% 10% 20% 10%;
 }
 .log-header-template-columns {
-    grid-template-columns: 20% 20% 20% 20% 20%;
-
+    grid-template-columns: 15% 15% 20% 20% 20% 10%;
 }
 #prof-case::before {
     content: "Личный кабинет";
@@ -79,23 +77,25 @@
     background-color: #282732;
 }
 
-#car-details .X-block {
+.X-block {
+    display:flex;
     width:5vmin;
     height:5vmin;
-    margin-right: 5%;
     align-self:center;
     border-radius: 100%;
+    font-size:1em;
     background-color: var(--bg-dr);
-    text-align: center;
+    justify-content: center;
+    align-items: center;
 
 }
-#car-details .X-block:hover {
+.X-block:hover {
     background-color: #d44747;
 }
-#car-details .X-block>.X {
+.X-block>.X {
     transform:rotate(45deg);
 }
-#car-details .X::before {
+.X::before {
     content: '+';
 }
 #car-details .car-img {
@@ -183,6 +183,7 @@
 }
 #vm {
     position:fixed;
+    overflow: auto;
     justify-self: right;
     font-family: 'Comfortaa';
     width: 80%;
@@ -204,7 +205,7 @@
     grid-template-rows: max-content max-content max-content max-content max-content;
 }
 #vm-grid>.elem {
-    width:100%;
+    width:90%;
     height:fit-content;
     padding-top: 5%;
     padding-left:10%;
@@ -219,8 +220,8 @@
     border-top: 1px solid var(--header-border-color);
 }
 #nav-menu {
-    display: none;
-    width:20%;
+    display: flex;
+    width:100%;
     justify-self: right;
     height: 90%;
     background: url(img/menu.png) no-repeat;
@@ -247,6 +248,16 @@
 #novosibirsk {
     background-image:url(img/novosibirsk.png)
 }
+#moscow {
+    background-image: url(img/moscow.png);
+}
+#chelab {
+    background-image: url(img/chelab.png);
+}
+#pither {
+    background-image: url(img/pither.png);
+}
+
 .filials {
     display:grid;
     width:60%;
@@ -675,40 +686,219 @@
     background-size:cover;
 }
 
-.central-holder {
+#car-view {
     display:grid;
-    width:1000px;
-    justify-self: center;
-    grid-template-columns: 250px 70%;
-    grid-template-rows: 250px 70%;
+    position:fixed;
+    width: 90vw;
+    height: fit-content;
+    overflow: auto;
+    left:50%;
+    top:50%;
+    transform: translate(-50%, -50%);
+    
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    padding:1%;
+    padding-bottom: 5%;
+    border-radius: 30px;
+    background-color:#27262B;
 }
+#car-view .X-block {
+    font-size:3em;
+}
+@media screen and (max-width: 1080px) {
+    #car-view {
+        width:100%;
+        height:100vh;
+        border-radius:0;
+        grid-template-columns: 100%;
+        padding:0;
+    }
+    #car-view .first-field {
+        grid-column: span 1;
+        justify-content: center;
+        align-items: center;
+    }
+    #car-view .X-block {
+        font-size: 200%;
+        margin-top:4%;
+        margin-right:4%;
+    }
+    #car-view .car {
+        width: 80%;
+        height: 80%;
+        grid-template-columns: 100%;
+        grid-template-rows: 50% 5.33% 5.33% 8%;
+        grid-column: span 3;
+    }
+    #car-view .car>.car-image {
+        width: 100%;
+        height: 100%;
+    }
+    #car-view .car>.price {
+        height: 100%;
+    }
+}
+#car-view .first-field {
+    display:flex;
+    justify-content: flex-end;
+    grid-column: span 3;
+}
+#car-view .car {
+    display:inline-grid;
+    width: 300px;
+    height: 400px;
+    justify-self: center;
+    align-self:center;
+    margin-top:10%;
+    grid-template-columns: 100%;
+    grid-template-rows: 200px 75px 75px 50px;
+    border: 5px outset red;
+    border-radius: 20px;
+}
+#car-view .car>.car-image {
+    width: 100%;
+    height: 200px;
+    border-radius:15px;
+    background-size: 100% 100%;
+}
+#car-view .car>.name {
+    height: fit-content;
+    font-size:20px;
+    color: var(--font-color-l);
+    text-align: center;
+    align-self: center;
+}
+#car-view .car>.price {
+    height: fit-content;
+    font-size:20px;
+    color: var(--font-color-l);
+    justify-self: center;
+    align-self: center;
+}
+#car-view .car>.button {
+    height: 80%;
+    margin-bottom:20%;
+}
+:root {
+    --s: 16vmin; 
+}
+.profile-body {
+    display:grid;
+    width:80%;
+    height:100%;
+    justify-self: center;
+    grid-template-columns: 100%;
+    grid-template-rows: calc(var(--s) + 10%) 50px calc(90% - 50px - var(--s));
+}
+.profile-header {
+    display:grid;
+    width:100%;
+    height:100%;
+    justify-self: center;
+    grid-template-columns: calc(var(--s) + 10%) calc(90% - var(--s));
+    grid-template-rows: 100%;
+}
+.prof-tabs {
+    display:flex;
+    overflow:auto;
+    width:minmax(600px, 100%);
+    height:100%;
+}
+#profile-content {
+    display:grid;
+    overflow: auto;
+    grid-column: span 2;
+    width:100%;
+    height:fit-content;
+    color: var(--font-color-l);
+    justify-self: center;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 100%;
+}
+#profile-content .card {
+    display: inline-block;
+    width: 300px;
+    height: 100px;
+    border-radius: 20px;
+    background:linear-gradient(0deg, rgb(0 96 79) 0, rgb(84 255 247) 100%);
+    
+}
+#profile-content .card>.text {
+
+}
+.prof-tab {
+    display:flex;
+    width:100%;
+    height:100%;
+    font-size:20px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color:var(--font-color-l);
+    transition-property: background-color, background-position;
+    transition-duration: 0.5s;
+    background-position-x: 100%;
+    border:none;
+    background-color:#464355;
+}
+.prof-tab:active {
+    background-color: #282732; 
+    
+}
+.prof-tab:hover {
+    background-color: #282732; 
+
+    background-position-x:0px;   
+} 
+
+
 .profile-name-font {
-    padding-top: 1.5em;
+    padding-top: 2em;
     font-size:2.5em;
     font-family: 'Comfortaa';
+    
 }
 @media screen and (max-width:1200px) {
-    .central-holder {
-        width:90%;
-        grid-template-columns: 80px 70%;
-        grid-template-rows: 80px 70%;
+    .profile-body {
+        width:80%;
     }
     .profile-name-font {
-        padding-top: 1em;
+        padding-top: 3em;
+        font-size: 1.5em;
+    }
+} 
+@media screen and (max-width:900px) {
+    .profile-body {
+        width:100%;
+    }
+    .profile-name-font {
+        padding-top: 3em;
         font-size: 1.5em;
     }
 } 
 
 .profile-img {
-    width: 80%;
-    height: 80%;
+    width:var(--s);
+    height:var(--s);
     border-radius:100%;
-    align-self: start;
+    align-self: center;
     justify-self: center;
-    margin-top:10%;
-    margin-left:10%;
     background: url(img/profile.png) no-repeat;
     background-size: 100% 100%;
+    background-position:center center;
+}
+.br-b {
+    border-bottom: 1px solid black;
+}
+.br-l {
+    border-left: 1px solid black;
+}
+.br-r {
+    border-right: 1px solid black;
+}
+.br-t {
+    border-top: 1px solid black;
 }
 #reg-block {
     display:grid;
@@ -1224,9 +1414,6 @@
     .media-element {
         display: flex;
     }
-    #nav-menu {
-        display:flex;
-    }
     .front-bg {
         width:100%;
     }
@@ -1234,7 +1421,13 @@
         width:90%;
     }
     
-
+    #nav-menu {
+        width:20%;
+    }
+    .profile-img {
+        width: 16vw;
+        height: 16vw;
+    }
 }
 @media screen and (max-width:450px) {
     #content .car-descr-block>.car-name {
@@ -1249,7 +1442,7 @@
 }
 @media screen and (min-width:892px) {
     #vm {
-        display:none;
+        width:30%;
     }
     
     
