--- a/style.css
+++ b/style.css
@@ -783,6 +783,13 @@
 :root {
     --s: 16vmin; 
 }
+
+#content .profile-bg {
+    display:grid;
+    min-height: 93vh;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+}
 .profile-body {
     display:grid;
     width:80%;
@@ -790,7 +797,7 @@
     min-height: 100%;
     justify-self: center;
     grid-template-columns: 100%;
-    grid-template-rows: calc(var(--s) + 10%) 50px max-content;
+    grid-template-rows: auto;
 }
 .profile-header {
     display:grid;
@@ -803,8 +810,8 @@
 .prof-tabs {
     display:flex;
     overflow:auto;
-    width:minmax(600px, 100%);
-    height:100%;
+    width:100%;
+    height:50px;
 }
 #profile-content {
     display:grid;
@@ -813,10 +820,70 @@
     color: var(--font-color-l);
     justify-self: center;
     grid-template-columns: 100%;
-    grid-template-rows: max-content;
+    grid-template-rows: auto;
     font-size:20px;
     margin-top:20px;
+    margin-bottom: 20px;
     text-align:center
+}
+#profile-content .car {
+    display:inline-grid;
+    width: 300px;
+    height: 400px;
+    justify-self: center;
+    align-self:center;
+    margin: 1%;
+    grid-template-columns: 100%;
+    grid-template-rows: 200px 75px 75px 50px;
+    border: 5px outset black;
+    background-color:#27262B;
+    border-radius: 20px;
+}
+#profile-content .car>.car-image {
+    width: 100%;
+    height: 200px;
+    border-radius:15px;
+    background-size: 100% 100%;
+}
+
+#profile-content .order {
+    display: inline-grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+    
+    border: 5px outset red;
+    border-radius: 20px;
+    background-color: #27262B;
+    padding-bottom: 50px;
+}
+#profile-content .order-cars {
+    display: inline-block;
+    width: 96%;
+    justify-self: center;
+    
+    background-color: #27262B;
+    padding-bottom: 50px;
+}
+#profile-content .order-name {
+    font-size:20px;
+}
+#profile-content .car>.name {
+    height: fit-content;
+    font-size:20px;
+    color: var(--font-color-l);
+    text-align: center;
+    align-self: center;
+}
+#profile-content .car>.price {
+    height: fit-content;
+    font-size:20px;
+    color: var(--font-color-l);
+    justify-self: center;
+    align-self: center;
+}
+#profile-content .car>.button {
+    height: 80%;
+    margin-bottom:20%;
 }
 #profile-content .card {
     display: inline-grid;
@@ -843,12 +910,6 @@
     align-self: center;
     margin-left:10%;
 }
-#profile-content .card-cvv {
-}
-#profile-content .car {
-    display: inline-block;
-}
-
 .prof-tab {
     display:flex;
     width:100%;
